refactor: refactor post controller
